More work with the calculator results and fixed mistake with vmdata on monopoly card game.

--- a/Games/MonopolyCardGame/Blazor/CalculatorResultsComponent.razor
+++ b/Games/MonopolyCardGame/Blazor/CalculatorResultsComponent.razor
@@ -1,3 +1,7 @@
-﻿<h3>CalculatorResultsComponent</h3>
+﻿<div style="height: 50vh;">
+    <LeftOverLayout>
+        <MainContent>
 
-
+        </MainContent>
+    </LeftOverLayout>
+</div>
