--- a/Games/MonopolyCardGame/Blazor/CardOrganizerComponent.razor
+++ b/Games/MonopolyCardGame/Blazor/CardOrganizerComponent.razor
@@ -27,11 +27,9 @@
 </div>
 <StackLayout>
     <StackItem>
-        <TempSetsBlazor TargetContainerSize="40vh" Divider="1.5" TempPiles="Model.TempSets1" />
+        <TempSetsBlazor TargetContainerSize="50vh" Divider="1.5" TempPiles="Model.TempSets1" />
     </StackItem>
     <StackItem>
-        <div>
-            Hello
-        </div>
+        <CalculatorResultsComponent IsTesting=true />
     </StackItem>
 </StackLayout>
