--- a/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
+++ b/Games/MonopolyCardGame/Blazor/Views/MonopolyCardGameMainView.razor
@@ -41,6 +41,10 @@
                     <GameButtonComponent Display="Go Out"
                                          CommandObject="GoOutCommand"
                                          StartOnNewLine="true" />
+                    <GameButtonComponent Display="End Turn"
+                                         CommandObject="EndTurnCommand"
+                                         StartOnNewLine=true
+                        />
                 </StackItem>
             </StackLayout>
             <div>
