--- a/Games/MonopolyCardGame/Blazor/CalculatorResultsComponent.razor
+++ b/Games/MonopolyCardGame/Blazor/CalculatorResultsComponent.razor
@@ -1,7 +1,7 @@
 ﻿<div style="height: 50vh;">
     <LeftOverLayout>
         <MainContent>
-            @foreach (var item in _list)
+            @foreach (var item in Calculations)
             {
                 <GridContainer  Columns="15vw auto">
                     <GridItem Column="1">
@@ -18,7 +18,7 @@
                         </StackLayout>
                     </GridItem>
                     <GridItem Column="2">
-                        <div style="font-size: 8vh; margin-right: 2vw; margin-top: -1.5vh;">
+                        <div style="font-size: 8vh; margin-right: 3vw; margin-top: -1.5vh;">
                             @GetTotal(item)
                         </div>
                     </GridItem>
