--- a/Standard/BasicGameFrameworkLibrary/wwwroot/basicgaming.css
+++ b/Standard/BasicGameFrameworkLibrary/wwwroot/basicgaming.css
@@ -57,3 +57,16 @@ legend {
     display: flex;
     align-items: center;
 }
+.blankrectangle {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+}
+.multiplepilesrelative {
+    position: relative;
+}
+
+.multiplepilesabsolute {
+    position: absolute;
+    left: 2px;
+}
