Completed the basics for the gameboard for the monopoly diced game.

--- a/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
+++ b/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
@@ -1,5 +1,5 @@
 @inherits BasicGameView<MonopolyDicedGameMainViewModel>
 <p>Welcome to MonopolyDicedGame</p>
-
+<GameBoardBlazor TargetHeight="75vh" ImageHeight="9vh" />
 
 <LabelGridComponent DataContext="DataContext!.VMData" Labels="_labels" />
