--- a/Games/MonopolyDicedGame/_Imports.razor
+++ b/Games/MonopolyDicedGame/_Imports.razor
@@ -15,3 +15,5 @@
 @using MonopolyDicedGame.Core.Data
 @using BasicGameFrameworkLibrary.Core.TestUtilities
 @using BasicGameFrameworkLibrary.Core.BasicGameDataClasses
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
+@using BasicBlazorLibrary.Components.Repeaters;
