--- a/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
+++ b/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
@@ -1,5 +1,16 @@
 @inherits BasicGameView<MonopolyDicedGameMainViewModel>
-<p>Welcome to MonopolyDicedGame</p>
-<GameBoardBlazor TargetHeight="75vh" ImageHeight="9vh" />
-
+<GameBoardBlazor 
+    NumberOfCops="_container!.SaveRoot.NumberOfCops"
+    TargetHeight="75vh"
+    MiscList="_others"
+    ImageHeight="9vh" />
 <LabelGridComponent DataContext="DataContext!.VMData" Labels="_labels" />
+@if (CanTestRoll())
+{
+    <GameButtonComponent Display="Test Roll Misc" CustomCallBack="TestRollMisc" />
+
+}
+@* 
+<MiscDiceBlazor Category="EnumMiscType.Go" TargetHeight="9vh" />
+
+  *@
