--- a/Games/MonopolyDicedGame/Blazor/PropertyBoardBlazor.razor
+++ b/Games/MonopolyDicedGame/Blazor/PropertyBoardBlazor.razor
@@ -1,11 +1,11 @@
 ﻿@{
     var list = GetSpaces();
-    var dice = GetDice();
 }
 @foreach (var item in list)
 {
-    <SpaceBlazor OnClicked="OnClicked" Column="item.Column" Row="item.Row">
-        @if (item.Owned == false)
+    var dice = GetDice(item.Own);
+    <SpaceBlazor OnClicked="PossibleClick" Column="item.Column" Row="item.Row">
+        @if (item.Own.Group != Group)
         {
             <ColorSpaceComponent Color="@Group.GetColor()"
                 TargetImageHeight="@TargetHeight"
