Added rules for clicking dice and figure out if you can place on board plus removing dice once placed and having less to roll.

--- a/Games/MonopolyDicedGame/Blazor/MonopolyListBlazor.razor
+++ b/Games/MonopolyDicedGame/Blazor/MonopolyListBlazor.razor
@@ -2,7 +2,9 @@
     @foreach (var item in DiceList)
     {
         <StackItem>
-            <BasicDiceBlazor TargetHeight="@ImageHeight" Dice="item" />
+            <div @onclick="() => OnDiceClick.InvokeAsync(item)">
+                <BasicDiceBlazor TargetHeight="@ImageHeight" Dice="item" />
+            </div>
         </StackItem>
     }
 </StackLayout>
