--- a/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
+++ b/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
@@ -26,7 +26,7 @@
         }
         <GameButtonComponent Display="Test Roll Regular" CustomCallBack="TestRollRegularAsync" />
         <div>
-            <MonopolyListBlazor DiceList="@_monopolySets!.DiceList" ImageHeight="9vh" />
+            <MonopolyListBlazor OnDiceClick=OnTestDiceClick DiceList="@_monopolySets!.DiceList" ImageHeight="9vh" />
         </div>
     </StackItem>
 </StackLayout>
