Started the processes of ending turn. Also, created the processes for selecting/unselecting dice and making that work for multiplayer.

--- a/Games/MonopolyDicedGame/Blazor/MonopolyListBlazor.razor
+++ b/Games/MonopolyDicedGame/Blazor/MonopolyListBlazor.razor
@@ -2,7 +2,7 @@
     @foreach (var item in DiceList)
     {
         <StackItem>
-            <div @onclick="() => OnDiceClick.InvokeAsync(item)">
+            <div @onclick="() => SelectDiceAsync(item)">
                 <BasicDiceBlazor TargetHeight="@ImageHeight" Dice="item" />
             </div>
         </StackItem>
