Finished processes for clicking properties, utilities, and train including multiplayer.

--- a/Games/MonopolyDicedGame/Blazor/MonopolyListBlazor.razor
+++ b/Games/MonopolyDicedGame/Blazor/MonopolyListBlazor.razor
@@ -1,10 +1,12 @@
-﻿<StackLayout>
-    @foreach (var item in DiceList)
-    {
-        <StackItem>
-            <div @onclick="() => SelectDiceAsync(item)">
-                <BasicDiceBlazor TargetHeight="@ImageHeight" Dice="item" />
-            </div>
-        </StackItem>
-    }
-</StackLayout>
+﻿<div style="height: @ImageHeight; margin-bottom: 4px;">
+    <StackLayout>
+        @foreach (var item in DiceList)
+        {
+            <StackItem>
+                <div @onclick="() => SelectDiceAsync(item)">
+                    <BasicDiceBlazor TargetHeight="@ImageHeight" Dice="item" />
+                </div>
+            </StackItem>
+        }
+    </StackLayout>
+</div>
