Finish Monopoly diced game. Making it less likely to get boardwalk/parkplace Plus less likely for the chances as well.

--- a/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
+++ b/Games/MonopolyDicedGame/Blazor/Views/MonopolyDicedGameMainView.razor
@@ -39,11 +39,7 @@
             <GameButtonComponent Display="Clear" CustomCallBack="Clear" />
         } *@
         <MonopolyListBlazor ImageHeight="9vh" />
-
-        
-        <div>
-            Test
-        </div>
+        <ScoreBoardBlazor P="MonopolyDicedGamePlayerItem" Players="DataContext.MainGame.PlayerList" Columns="_scores" />
 
 
     </StackItem>
