Finished processes for making prediction. Plus processes for autoresume (minor fixes). Plus fixes for when its new turn or end of turn. For now, the computer just gives clues.

--- a/Games/ClueCardGame/Blazor/Views/ClueCardGameMainView.razor
+++ b/Games/ClueCardGame/Blazor/Views/ClueCardGameMainView.razor
@@ -12,6 +12,7 @@
     </StackItem>
     <StackItem Length="400px">
         <LabelGridComponent DataContext="_vmData" Labels="_labels" />
+        <GameButtonComponent Display="Make Prediction" CommandObject="MakePredictionCommand" />
         <GameButtonComponent Display="End Turn" CommandObject="EndTurnCommand" />
     </StackItem>
     <StackItem>
@@ -26,3 +27,13 @@
         }
     </StackItem>
 </StackLayout>
+@if (_vmData.Accusation.Visible == false)
+{
+    <HandBlazor Hand="_vmData.Prediction" />
+}
+<HandBlazor Hand="_vmData.Accusation" />
+<BasicNotebookComponent
+    PredictCommand="AddPredictionCommand"
+    PersonalNotebook="_gameContainer.DetectiveDetails!.PersonalNotebook"
+    
+    />
