Completed work for being able to make accusation.  Still has to test when its correct.

--- a/Games/ClueCardGame/Blazor/BasicNotebookComponent.razor
+++ b/Games/ClueCardGame/Blazor/BasicNotebookComponent.razor
@@ -7,7 +7,7 @@
         <StackItem>
             <CardGraphicsBlazor CommandParameter="item"
                                 TargetHeight="@RealHeight"
-                CommandObject="PredictCommand"
+                                CommandObject="AddCommand"
                 DeckObject="item" />
         </StackItem>
     }
@@ -21,7 +21,7 @@
         <StackItem>
             <CardGraphicsBlazor CommandParameter="item"
                                 TargetHeight="@RealHeight"
-                CommandObject="PredictCommand"
+                                CommandObject="AddCommand"
                 DeckObject="item" />
         </StackItem>
     }
@@ -35,7 +35,7 @@
         <StackItem>
             <CardGraphicsBlazor CommandParameter="item"
                                 TargetHeight="@RealHeight"
-                CommandObject="PredictCommand"
+                                CommandObject="AddCommand"
                 DeckObject="item" />
         </StackItem>
     }
