--- a/Games/SorryDicedGame/Blazor/GamePage.razor
+++ b/Games/SorryDicedGame/Blazor/GamePage.razor
@@ -21,9 +21,7 @@
     <MultiplayerOpeningView P="SorryDicedGamePlayerItem" />
 </ParentControl>
 <ParentControl VM="BeginningChooseColorViewModel<EnumColorChoice, SorryDicedGamePlayerItem>">
-    
     <BeginningChooseColorView E="EnumColorChoice" Context="Piece" P="SorryDicedGamePlayerItem">
-        @* if there is another piece, replace with proper piece. *@
-        <CheckerPiece HasImage="true" PieceCategory="EnumCheckerPieceCategory.OnlyPiece" MainColor="@GetColor(Piece.EnumValue)" />
+        <PawnPiece MainColor="@GetColor(Piece.EnumValue)" />
     </BeginningChooseColorView>
 </ParentControl>
