Created the basics for the start component for sorry diced game.

--- a/Games/SorryDicedGame/Blazor/Views/SorryDicedGameMainView.razor
+++ b/Games/SorryDicedGame/Blazor/Views/SorryDicedGameMainView.razor
@@ -3,5 +3,8 @@
 <GameButtonComponent Display="Roll Dice" CommandObject="RollCommand" />
 
 <CompleteDiceRollerComponent ImageHeight="15vh" />
+<CompleteStartComponent ImageHeight="6vh"
+    
+    Players="DataContext!.MainGame.PlayerList" />
 
 <LabelGridComponent DataContext="DataContext!.VMData" Labels="_labels" />
