--- a/Games/SorryDicedGame/_Imports.razor
+++ b/Games/SorryDicedGame/_Imports.razor
@@ -17,3 +17,5 @@
 @using BasicGameFrameworkLibrary.Core.BasicGameDataClasses
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Base
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
+@using BasicBlazorLibrary.Components.CssGrids
+@using BasicBlazorLibrary.Components.Repeaters
